<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="500px"
        android:layout_height="500px"
        android:transitionName="logo_image"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        app:boxStrokeColor="@color/light_cyan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/light_cyan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_padlock"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgetpassword_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/forget_password"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_gravity="end">


        <TextView
            android:id="@+id/signpassword_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:hint="@string/sign_in"
            android:padding="10dp"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/signin_image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_login" />


    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="0.7"
        android:gravity="bottom"

        android:layout_height="0dp">


    <TextView
        android:id="@+id/donothaveaccount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto"
        android:hint="@string/don_t_have_an_account"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>